Added more items to reading list. Updating todays log. Fixed formatting issue with last weeks report

--- a/documentation/project_logbook/07-10-15.md
+++ b/documentation/project_logbook/07-10-15.md
@@ -5,9 +5,38 @@ My guess at the moment is that when you mount a pen drive with a bootable linux 
 are limited by something unless it's mounted as read-only. That's an educated guess taken from what
 I observe when the lecturer of CS424 does when he boots Debian off of his pen drive.
 
+Created a trello board to keep track of all the generated stories
+
 Going to start drilling down into Story 1
 
 ##Monitoring when filesystems are mounted
 
 Found source code documentation for autofs (in Linux/Documentation/autofs.txt).
-Decided to create a reading list to better track documentation
+Decided to create a reading list to better track documentation.
+
+Going to clone the Linux Test Project (https://github.com/linux-test-project/ltp) in order to get
+a better feel for how the mounting system works.
+
+Found https://en.wikipedia.org/wiki/Automounter
+
+So it appears that when you insert a pendrive into the machine, autofs(4) picks up the mount point, sends it to automount which then mounts it.
+
+** Extracted from https://en.wikipedia.org/wiki/Automounter **
+
+	An automounter is any program or software facility which automatically mounts filesystems in response to access operations by user programs. An automounter system utility (daemon under Unix), when notified of file and directory access attempts under selectively monitored subdirectory trees, dynamically and transparently makes local or remote devices accessible.
+
+	The automounter has the purpose of conserving local system resources and of reducing the coupling between systems which share filesystems with a number of servers. For example, a large to mid-sized organization might have hundreds of file servers and thousands of workstations or other nodes accessing files from any number of those servers at any time. Usually, only a relatively small number of remote filesystems (exports) will be active on any given node at any given time. Deferring the mounting of such a filesystem until a process actually needs to access it reduces the need to track such mounts, increasing reliability, flexibility and performance.
+
+	Frequently, one or more fileservers will become inaccessible (down for maintenance, on a remote and temporarily disconnected network, or accessed via a congested link). Administrators also often find it necessary to relocate data from one file server to another - to resolve capacity issues and balance the load. Having data mount-points automated makes it easier to reconfigure client systems in such cases.
+
+	These factors combine to pose challenges to older "static" management methods of filesystem mount tables (the fstab files on Unix systems).
+	Automounter utilities address these challenges and allow sysadmins to consolidate and centralize the associations of mountpoints (directory
+		names) to the exports. When done properly, users can transparently access files and directories as if all of their workstations and 
+		other nodes attach to a single enterprise-wide filesystem.
+
+	One can also use automounters to define multiple repositories for read-only data; client systems can automatically choose which repository to mount based on availability, file-server load, or proximity on the network.
+
+
+Possible avenue there (Oh, found magic.h in the Kernel. Nice to see a sense of humor)
+
+What s the actual difference between Userspace and Kernel
