Extensive refactoring of project. Currently finishing off test cases for remounting process

--- a/documentation/project_logbook/Week 6/9|10-11-15.md
+++ b/documentation/project_logbook/Week 6/9|10-11-15.md
@@ -9,4 +9,9 @@ That solved all my linkage problems.
 
 https://github.com/anastasiak2512/Calendar/ was responsible for helping fix this problem
  
-Right my mutator methods for timer.h works as planned. How about rewrites?
+Right my mutator methods for timer.h works as planned. How about writes?
+
+Adding unit tests to the rewrite function.
+
+http://www.cplusplus.com/reference/string/string/c_str/ is helping quite a bit for moving strings from cpp to 
+c.
