Removed unused logging funcitonality. Will remove gtesting libraries to use ruby instead

--- a/documentation/project_logbook/Week 7/25-11-15.md
+++ b/documentation/project_logbook/Week 7/25-11-15.md
@@ -1,5 +1,5 @@
 #25-11-15
 
 Right so it looks like using ruby to test sfarro seems like the SANEST way to do it. I have ruby installed proper so 
-now the next thing I should be to write the functional tests for sfarro this way. Then I shuold have an automated
+now the next thing I should be to write the functional tests for sfarro this way. Then I should have an automated
  way to ensure that I have code that verifies that all my requirements have been met in the code.
